--- a/main.html
+++ b/main.html
@@ -7,10 +7,22 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<img src="https://th.bing.com/th/id/OIP.T0RQM1EuiG54A1apVLhjuwHaJQ?pid=ImgDet&rs=1">
+    <h2>Gaurav Singh</h2>
+    <a href="www.linkedin.com">Linkedin Profile</a>
+    <section id="skills">
+        Skills
+    <ul>
+        c c++ java sql
+    </ul>
+    </section>
+    <section id="projects">
+        Projects
+        <ul>
+            <li>Emi Calculator</li>
+            <li>speed fuel calculation</li>
+        </ul>
+    </section>
 </body>
 
 </html>
